--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "express-winston": "^4.2.0",
     "throw-http-errors": "^4.0.1",
     "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "chalk": "^4.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "winston-logs-display": "^1.0.0"
+    "nodemon": "^2.0.20"
   }
 }
