--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "start-local-dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
     "throw-http-errors": "^4.0.1",
     "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1",
-    "chalk": "^4.1.2"
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
