--- a/package.json
+++ b/package.json
@@ -19,12 +19,20 @@
   "scripts": {
     "start-local-dev": "nodemon src/app.js"
   },
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "style": "module"
+    }
+  },
   "dependencies": {
     "chalk": "^4.1.2",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-useragent": "^1.0.15",
+    "express-validation": "^4.1.0",
     "express-winston": "^4.2.0",
+    "moment": "^2.29.4",
     "throw-http-errors": "^4.0.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
