--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     }
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
@@ -33,11 +35,16 @@
     "express-validation": "^4.1.0",
     "express-winston": "^4.2.0",
     "moment": "^2.29.4",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.4",
     "throw-http-errors": "^4.0.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/register": "^7.18.9",
     "nodemon": "^2.0.20"
   }
 }
