Progress - Create dynamic module for rest api

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-useragent": "^1.0.15",
     "express-validation": "^4.1.0",
     "express-winston": "^4.2.0",
+    "glob": "^8.0.3",
     "moment": "^2.29.4",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
